--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,24 @@
-.app {
-  border: 1px dashed blue; }
-  .app .title {
-    text-align: center; }
+.App {
+  border: 1px dashed red;
+  min-height: 100vh;
+  position: relative;
+  margin: 0;
+  padding: 0; }
+
+.App .main-content {
+  border: 1px dashed green;
+  padding: 20px; }
+
+.NavBar {
+  background-color: lightgrey;
+  padding: 20px; }
+
+.Footer {
+  background-color: black;
+  color: white;
+  padding: 20px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center; }
