--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,24 +1,75 @@
-.NavTrigger {
-  position: fixed;
-  top: 0;
-  right: 0;
-  padding: 10px;
-  color: red; }
-
-.NavTrigger h1 {
-  display: inline-block; }
-
+/* breakpoints */
+/* base units */
+/* nav */
 .Nav {
+  z-index: 100;
   transition: all .5s ease;
   background-color: lightgrey;
   position: fixed;
   top: 0;
-  left: 0;
-  height: 100vh;
-  width: 50vw; }
+  left: 0; }
 
-.Nav.open {
-  transform: translate3d(0vw, 0, 0); }
+.Nav ul {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex; }
 
-.Nav.closed {
-  transform: translate3d(-100vw, 0, 0); }
+.Nav ul li {
+  list-style: none;
+  margin: 10px;
+  display: inline; }
+
+/* 640px or bigger */
+@media only screen and (min-width: 640px) {
+  .NavTrigger {
+    display: none; }
+  .Nav {
+    height: 40px;
+    width: 100vw; }
+  .Nav ul {
+    -webkit-flex-flow: row;
+    -moz-flex-flow: row;
+    -ms-flex-flow: row;
+    flex-flow: row;
+    -webkit-justify-content: flex-end;
+    -moz-justify-content: flex-end;
+    -ms-justify-content: flex-end;
+    justify-content: flex-end;
+    -ms-flex-pack: flex-end;
+    padding: 0;
+    margin: 0 20px; }
+  .Nav ul li {
+    margin: 10px;
+    display: inline; } }
+
+/* 640px or smaller */
+@media only screen and (max-width: 640px) {
+  .NavTrigger {
+    display: block;
+    cursor: pointer;
+    position: fixed;
+    top: 0;
+    right: 0; }
+  .NavTrigger h1 {
+    display: inline-block;
+    margin: 0; }
+  .Nav {
+    height: 100vh;
+    width: 300px;
+    max-width: 70vw; }
+  .Nav.open {
+    transform: translate3d(0vw, 0, 0); }
+  .Nav.closed {
+    transform: translate3d(-300px, 0, 0); }
+  .Nav ul {
+    -webkit-flex-flow: column;
+    -moz-flex-flow: column;
+    -ms-flex-flow: column;
+    flex-flow: column;
+    padding: 20px;
+    margin: 0; }
+  .Nav ul li {
+    margin: 10px;
+    display: block; } }
