--- a/src/Nav.css
+++ b/src/Nav.css
@@ -48,6 +48,7 @@
 @media only screen and (max-width: 640px) {
   .NavTrigger {
     display: block;
+    padding: 10px;
     cursor: pointer;
     position: fixed;
     top: 0;
