--- a/src/styles/_all.scss
+++ b/src/styles/_all.scss
@@ -1,3 +1,3 @@
-@import '_variables.scss';
-@import '_flexbox.scss';
-@import '_mixins.scss';
+@import '_variables';
+@import '_flexbox';
+@import '_mixins';
