--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,2 +1,23 @@
+/* breakpoints */
+/* base units */
+/* nav */
+body {
+  font-size: 12px; }
+
+/*h1 {
+	font-size: ms(5);
+}
+h2 {
+	font-size: ms(4);
+}
+h3 {
+	font-size: ms(3);
+}
+h4 {
+	font-size: ms(2);
+}
+p {
+	font-size: ms(1);
+}*/
 .title.center {
   text-align: center; }
