--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,3 +1,29 @@
+@import '_all';
+@import '_modular-scale';
+
+$ms-base: 1em;
+$ms-ratio: $golden;
+
+body {
+	font-size: 12px;	
+}
+
+/*h1 {
+	font-size: ms(5);
+}
+h2 {
+	font-size: ms(4);
+}
+h3 {
+	font-size: ms(3);
+}
+h4 {
+	font-size: ms(2);
+}
+p {
+	font-size: ms(1);
+}*/
+
 .title {
 	&.center {
 		text-align: center;
