--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,12 @@ $breakpoint: 640px;
 /* base units */
 $gutter: 20px;
 
+/* z-index */
+$bottom: 0;
+$middle: 1;
+$top: 10;
+$ultimate_top: 100;
+
 /* nav */
 $fixed_nav_height: 40px;
 $slideout_nav_width: 300px;
