--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,30 @@
 /* base units */
 /* z-index */
 /* nav */
+/* footer */
 .App {
   border: 1px dashed red;
   min-height: 100vh;
   position: relative;
   margin: 0;
   padding: 0; }
-  .App .Nav {
-    /* CSS on the component level */ }
-  .App .main-content {
-    border: 1px dashed green;
-    margin-top: 40px;
-    padding: 20px; }
-  .App .Footer {
-    background-color: black;
-    color: white;
-    padding: 20px;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    text-align: center; }
+
+.App .Nav {
+  /* CSS on the component level */ }
+
+.App .main-content {
+  border: 1px dashed green;
+  margin-top: 40px;
+  margin-bottom: 140px;
+  padding: 20px; }
+
+.App .Footer {
+  background-color: black;
+  color: white;
+  padding: 20px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  height: 100px; }
