--- a/src/Shroud.css
+++ b/src/Shroud.css
@@ -2,6 +2,7 @@
 /* base units */
 /* z-index */
 /* nav */
+/* footer */
 .Shroud {
   z-index: 10;
   width: 100vw;
@@ -10,10 +11,12 @@
   position: fixed;
   top: 0;
   left: 0; }
-  .Shroud.show {
-    display: block; }
-  .Shroud.hide {
-    display: none; }
+
+.Shroud.show {
+  display: block; }
+
+.Shroud.hide {
+  display: none; }
 
 @media only screen and (min-width: 640px) {
   .Shroud {
