--- a/src/styles/_flexbox.scss
+++ b/src/styles/_flexbox.scss
@@ -135,3 +135,12 @@
       -ms-align-self: $align;
           align-self: $align;
 }
+
+// short cuts
+// perfect center (horizontal + vertical), can pass flex-flow direction
+@mixin flexbox-center($flow) {
+  @include flexbox();
+  @include flex-flow($flow);
+  @include align-items(center);
+  @include justify-content(center);
+}
