--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -3,10 +3,10 @@
 /* z-index */
 /* nav */
 /* footer */
-.WorkList {
+.ProjectList {
   border: 1px dashed blue; }
 
-.WorkList ul.work-list {
+.ProjectList ul.project-list {
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -30,7 +30,7 @@
   -ms-flex-wrap: wrap;
   flex-wrap: wrap; }
 
-.WorkItem {
+.ProjectItem {
   border: 1px dashed red;
   display: -webkit-box;
   display: -moz-box;
