--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -5,41 +5,17 @@
 /* footer */
 .ProjectList {
   border: 1px dashed blue; }
-  .ProjectList ul.project-list {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-flow: row;
-    -moz-flex-flow: row;
-    -ms-flex-flow: row;
-    flex-flow: row;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center;
-    -webkit-flex-wrap: wrap;
-    -moz-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap; }
 
-.ProjectItem {
-  border: 1px dashed red;
+.ProjectList ul.project-list {
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  -webkit-flex-flow: column;
-  -moz-flex-flow: column;
-  -ms-flex-flow: column;
-  flex-flow: column;
+  -webkit-flex-flow: row;
+  -moz-flex-flow: row;
+  -ms-flex-flow: row;
+  flex-flow: row;
   -webkit-align-items: center;
   -moz-align-items: center;
   -ms-align-items: center;
@@ -49,15 +25,24 @@
   -ms-justify-content: center;
   justify-content: center;
   -ms-flex-pack: center;
-  width: 300px;
-  max-width: 100vw;
-  height: 300px;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+.ProjectItem {
+  border: 1px dashed red;
+  /*@include flexbox-center(column);*/
+  /*width: $work_tile_size;*/
+  /*max-width: 100vw;*/
+  /*height: $work_tile_size;*/
   /*margin: $gutter;*/
-  background-size: cover;
-  background-position: 50% 50%;
-  color: yellow;
+  /*color: yellow;*/
   cursor: pointer; }
 
 .ProjectDetail {
   border: 1px dashed yellow;
-  min-height: 100vh; }
+  min-height: 100vh;
+  background-size: cover;
+  background-position: 50% 50%;
+  color: red; }
