--- a/src/pages/Projects/ProjectList.scss
+++ b/src/pages/Projects/ProjectList.scss
@@ -11,17 +11,18 @@ $work_tile_size: 300px;
 }
 .ProjectItem {
 	border: 1px dashed red;
-	@include flexbox-center(column);
-	width: $work_tile_size;
-	max-width: 100vw;
-	height: $work_tile_size;
+	/*@include flexbox-center(column);*/
+	/*width: $work_tile_size;*/
+	/*max-width: 100vw;*/
+	/*height: $work_tile_size;*/
 	/*margin: $gutter;*/
-	background-size: cover;
-	background-position: 50% 50%;
-	color: yellow;
+	/*color: yellow;*/
 	cursor: pointer;
 }
 .ProjectDetail {
 	border: 1px dashed yellow;
 	min-height: 100vh;
+	background-size: cover;
+	background-position: 50% 50%;
+	color: red;
 }
