--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -3,8 +3,53 @@
 /* z-index */
 /* nav */
 /* footer */
-.ProjectList {
-  border: 1px dashed blue; }
+.ProjectList ul.project-list {
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-bottom: 20px; }
+
+.ProjectItem {
+  cursor: pointer;
+  background-image: none !important;
+  color: red;
+  /*	
+	// box/tile design
+	@include flexbox-center(column);
+	width: $project_tile_size;
+	max-width: 100vw;
+	height: $project_tile_size;
+	background-size: cover;
+	background-position: 50% 50%;
+*/ }
+
+.ProjectDetail {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column;
+  -moz-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  min-height: 100vh;
+  background-size: cover;
+  background-position: 50% 50%;
+  color: red; }
+
+/* 640px or bigger */
+@media only screen and (min-width: 640px) {
   .ProjectList ul.project-list {
     display: -webkit-box;
     display: -moz-box;
@@ -23,25 +68,30 @@
     -moz-justify-content: center;
     -ms-justify-content: center;
     justify-content: center;
-    -ms-flex-pack: center;
-    -webkit-flex-wrap: wrap;
-    -moz-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap; }
+    -ms-flex-pack: center; }
+  .ProjectItem {
+    margin-right: 10px; } }
 
-.ProjectItem {
-  border: 1px dashed red;
-  /*@include flexbox-center(column);*/
-  /*width: $work_tile_size;*/
-  /*max-width: 100vw;*/
-  /*height: $work_tile_size;*/
-  /*margin: $gutter;*/
-  /*color: yellow;*/
-  cursor: pointer; }
-
-.ProjectDetail {
-  border: 1px dashed yellow;
-  min-height: 100vh;
-  background-size: cover;
-  background-position: 50% 50%;
-  color: red; }
+/* 640px or smaller */
+@media only screen and (max-width: 640px) {
+  .ProjectList ul.project-list {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: column;
+    -moz-flex-flow: column;
+    -ms-flex-flow: column;
+    flex-flow: column;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    -ms-flex-pack: center; }
+  .ProjectItem {
+    margin-bottom: 10px; } }
