--- a/src/App.css
+++ b/src/App.css
@@ -3,26 +3,27 @@
 /* z-index */
 /* nav */
 /* footer */
+html {
+  height: 100%; }
+
 .App {
-  border: 1px dashed red;
+  /*border: 1px dashed red;*/
   min-height: 100vh;
   position: relative;
   margin: 0;
   padding: 0; }
-  .App .Nav {
-    /* CSS on the component level */ }
-  .App .main-content {
-    border: 1px dashed green;
-    margin-top: 40px;
-    margin-bottom: 140px;
-    padding: 20px; }
-  .App .Footer {
-    background-color: black;
-    color: white;
-    padding: 20px;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    text-align: center;
-    height: 100px; }
+
+.App .Nav {
+  /* CSS on the component level */ }
+
+.App .main-content {
+  min-height: calc(100vh - 100px - 40px);
+  margin-top: 40px;
+  padding: 20px; }
+
+.App .Footer {
+  background-color: black;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  height: 100px; }
