--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,10 @@
 @import './styles/_all';
 
+html {
+	height: 100%;
+}
 .App {
-	border: 1px dashed red;
+	/*border: 1px dashed red;*/
 	min-height: 100vh;
 	position: relative;
 	margin: 0;
@@ -10,19 +13,14 @@
 		/* CSS on the component level */
 	}
 	.main-content {
-		border: 1px dashed green;
+		min-height: calc(100vh - #{$footer_height} - #{$fixed_nav_height});
 		margin-top: $fixed_nav_height;
-		margin-bottom: $footer_height + $gutter*2;
 		padding: 20px;
 	}
 	.Footer {
 		background-color: black;
 		color: white;
 		padding: 20px;
-		position: absolute;
-		right: 0;
-		bottom: 0;
-		left: 0;
 		text-align: center;
 		height: $footer_height;
 	}
