--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,36 @@
 /* z-index */
 /* nav */
 /* footer */
+.flex-row {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row;
+  -moz-flex-flow: row;
+  -ms-flex-flow: row;
+  flex-flow: row; }
+
+/* 640px or smaller */
+@media only screen and (max-width: 640px) {
+  .flex-row.responsive {
+    -webkit-flex-flow: column;
+    -moz-flex-flow: column;
+    -ms-flex-flow: column;
+    flex-flow: column; } }
+
+.flex-col {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column;
+  -moz-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column; }
+
 html {
   height: 100%; }
 
@@ -12,18 +42,15 @@ html {
   position: relative;
   margin: 0;
   padding: 0; }
-
-.App .Nav {
-  /* CSS on the component level */ }
-
-.App .main-content {
-  min-height: calc(100vh - 100px - 40px);
-  margin-top: 40px;
-  padding: 20px; }
-
-.App .Footer {
-  background-color: black;
-  color: white;
-  padding: 20px;
-  text-align: center;
-  height: 100px; }
+  .App .Nav {
+    /* CSS on the component level */ }
+  .App .main-content {
+    min-height: calc(100vh - 100px - 40px);
+    margin-top: 40px;
+    padding: 20px; }
+  .App .Footer {
+    background-color: black;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    height: 100px; }
