--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -53,21 +53,29 @@
   justify-content: center;
   -ms-flex-pack: center;
   margin-top: 40px; }
-  .Resume .resume-container .left-col, .Resume .resume-container .right-col {
-    border: 1px dashed blue; }
-  .Resume .resume-container .resume-section {
-    border: 1px dashed red;
-    width: 100%;
-    max-width: 90vw;
-    margin-bottom: 40px; }
-    .Resume .resume-container .resume-section#Skills .skill-section {
-      width: 100%;
-      border: 1px dashed red; }
-    .Resume .resume-container .resume-section .resume-section-list {
-      border: 1px dashed green;
-      margin-bottom: 20px; }
-      .Resume .resume-container .resume-section .resume-section-list:last-child {
-        margin-bottom: 0; }
+
+.Resume .resume-container .left-col, .Resume .resume-container .right-col {
+  border: 1px dashed blue; }
+
+.Resume .resume-container .resume-section {
+  border: 1px dashed red;
+  width: 100%;
+  max-width: 90vw;
+  margin-bottom: 40px; }
+
+.Resume .resume-container .resume-section#Skills .skill-section {
+  width: 100%;
+  border: 1px dashed red; }
+
+.Resume .resume-container .resume-section .resume-section-list {
+  border: 1px dashed green;
+  margin-bottom: 20px; }
+
+.Resume .resume-container .resume-section .resume-section-list:last-child {
+  margin-bottom: 0; }
+
+.Resume .resume-container .resume-section .resume-section-list .title.flex-row {
+  margin-bottom: 20px; }
 
 /* 640px or bigger */
 @media only screen and (min-width: 640px) {
@@ -95,11 +103,17 @@
     -ms-align-items: flex-start;
     align-items: flex-start;
     width: 1000px; }
-    .Resume .resume-container .resume-section#Skills .skill-section {
-      margin-right: 10px;
-      width: 33%; }
-      .Resume .resume-container .resume-section#Skills .skill-section:last-child {
-        margin-right: 0; }
+  .Resume .resume-container .resume-section#Skills .skill-section {
+    margin-right: 10px;
+    /*width: 33%;*/ }
+  .Resume .resume-container .resume-section#Skills .skill-section:last-child {
+    margin-right: 0; }
+  .Resume .resume-container .resume-section#Skills .skill-section#Skillset ul {
+    margin-right: 20px; }
+  .Resume .resume-container .resume-section#Skills .skill-section#Skillset ul:last-child {
+    margin-right: 0; }
+  .Resume .resume-container .resume-section#Skills .skill-section#Tools {
+    width: 33%; }
   .Resume .resume-container .left-col {
     margin-right: 40px;
     width: 20%; }
@@ -128,11 +142,11 @@
     -ms-justify-content: center;
     justify-content: center;
     -ms-flex-pack: center; }
-    .Resume .resume-container .resume-section#Skills .skill-section {
-      margin-bottom: 20px; }
-      .Resume .resume-container .resume-section#Skills .skill-section:last-child {
-        margin-bottom: 0; }
-    .Resume .resume-container .resume-section .left-col, .Resume .resume-container .resume-section .right-col {
-      width: 100%; }
-    .Resume .resume-container .resume-section .left-col {
-      margin-bottom: 20px; } }
+  .Resume .resume-container .resume-section#Skills .skill-section {
+    margin-bottom: 20px; }
+  .Resume .resume-container .resume-section#Skills .skill-section:last-child {
+    margin-bottom: 0; }
+  .Resume .resume-container .resume-section .left-col, .Resume .resume-container .resume-section .right-col {
+    width: 100%; }
+  .Resume .resume-container .resume-section .left-col {
+    margin-bottom: 20px; } }
