--- a/src/Nav.css
+++ b/src/Nav.css
@@ -40,17 +40,22 @@
   position: fixed;
   top: 0;
   left: 0; }
-  .Nav ul {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex; }
-    .Nav ul li {
-      border: 1px dashed red;
-      list-style: none;
-      margin: 10px;
-      display: inline; }
+
+.Nav #Logo {
+  position: fixed; }
+
+.Nav ul {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex; }
+
+.Nav ul li {
+  border: 1px dashed red;
+  list-style: none;
+  margin: 10px;
+  display: inline; }
 
 /* 640px or bigger */
 @media only screen and (min-width: 640px) {
@@ -59,49 +64,56 @@
   .Nav {
     height: 40px;
     width: 100vw; }
-    .Nav ul {
-      -webkit-flex-flow: row;
-      -moz-flex-flow: row;
-      -ms-flex-flow: row;
-      flex-flow: row;
-      -webkit-justify-content: flex-end;
-      -moz-justify-content: flex-end;
-      -ms-justify-content: flex-end;
-      justify-content: flex-end;
-      -ms-flex-pack: flex-end;
-      padding: 0;
-      margin: 0 20px; }
-      .Nav ul li {
-        margin: 10px;
-        display: inline; } }
+  .Nav #Logo {
+    top: 10px;
+    left: 20px; }
+  .Nav ul {
+    -webkit-flex-flow: row;
+    -moz-flex-flow: row;
+    -ms-flex-flow: row;
+    flex-flow: row;
+    -webkit-justify-content: flex-end;
+    -moz-justify-content: flex-end;
+    -ms-justify-content: flex-end;
+    justify-content: flex-end;
+    -ms-flex-pack: flex-end;
+    padding: 0;
+    margin: 0 20px; }
+  .Nav ul li {
+    margin: 10px;
+    display: inline; } }
 
 /* 640px or smaller */
 @media only screen and (max-width: 640px) {
   .NavTrigger {
+    transform: rotate(90deg);
     display: block;
     padding: 10px;
     cursor: pointer;
     position: fixed;
     top: 0;
     right: 0; }
-    .NavTrigger h1 {
-      display: inline-block;
-      margin: 0; }
+  .NavTrigger h1 {
+    display: inline-block;
+    margin: 0; }
   .Nav {
     height: 100vh;
     width: 300px;
     max-width: 70vw; }
-    .Nav.open {
-      transform: translate3d(0vw, 0, 0); }
-    .Nav.closed {
-      transform: translate3d(-300px, 0, 0); }
-    .Nav ul {
-      -webkit-flex-flow: column;
-      -moz-flex-flow: column;
-      -ms-flex-flow: column;
-      flex-flow: column;
-      padding: 20px;
-      margin: 0; }
-      .Nav ul li {
-        margin: 10px;
-        display: block; } }
+  .Nav.open {
+    transform: translate3d(0vw, 0, 0); }
+  .Nav.closed {
+    transform: translate3d(-300px, 0, 0); }
+  .Nav #Logo {
+    left: 40px;
+    bottom: 20px; }
+  .Nav ul {
+    -webkit-flex-flow: column;
+    -moz-flex-flow: column;
+    -ms-flex-flow: column;
+    flex-flow: column;
+    padding: 20px;
+    margin: 0; }
+  .Nav ul li {
+    margin: 10px;
+    display: block; } }
