--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,6 @@
 @mixin border($color) {
 	border: 1px dashed $color;
 }
+@mixin serif($font) {
+	font-family: "ff-tisa-web-pro",Palatino," Palatino Linotype","Palatino LT STD","Book Antiqua",Georgia,serif;
+}
