--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -4,34 +4,53 @@
 $ms-base: 1em;
 $ms-ratio: $golden;
 
+@font-face {
+	font-family: 'Roboto';
+	src: url('./fonts/roboto/Roboto-Regular.ttf');
+}
+@font-face {
+	font-family: 'RobotoBold';
+	src: url('./fonts/roboto/Roboto-Bold.ttf');
+}
+
+.serif {
+	font-family: 'Libre Baskerville', serif;
+}
+
+html {font-size: 1em;}
+
 body {
-	font-size: 12px;	
-	font-family: Helvetica, Arial, Sans-Serif;
+	background-color: white;
+	/*font-family: 'Libre Baskerville', serif;*/
+	font-family: Roboto, Helvetica, Arial, Sans-Serif;
+	font-weight: 400;
+	line-height: 1.45;
+	color: #333;
+}
+
+/*p {margin-bottom: 1.3em;}*/
+
+h1, h2, h3, h4 {
+	/*margin: 1.414em 0 0.5em;*/
+	font-weight: inherit;
+	line-height: 1.2;
 }
 
 h1 {
-	font-size: ms(4);
-	/*line-height: ms(4) * 1.2;*/
-}
-h2 {
-	font-size: ms(3);
-	line-height: ms(3) * .5;
-}
-h3 {
-	font-size: ms(2);
-	line-height: ms(2) * 0.7;
-}
-h4 {
-	font-size: ms(1);
-	line-height: ms(1) * 1.2;
-}
-p {
-	font-size: ms(0);
-	line-height: ms(0) * 1.2;
+	margin-top: 0;
+	font-size: 3.998em;
 }
 
+h2 {font-size: 2.827em;}
+
+h3 {font-size: 1.999em;}
+
+h4 {font-size: 1.414em;}
+
+small, .font_small {font-size: 0.707em;}
+
 .title {
-	margin-bottom: $gutter;
+	/*margin-bottom: $gutter;*/
 }
 .center {
 	* { text-align: center; }
@@ -45,5 +64,6 @@ h1, h2, h3, h4, p {
 	text-transform: uppercase;
 }
 .bold {
-	font-weight: bold;
+	/*font-weight: bold;*/
+	font-family: 'RobotoBold';
 }
