--- a/src/Nav.css
+++ b/src/Nav.css
@@ -3,6 +3,7 @@
 /* z-index */
 /* nav */
 /* footer */
+/* colors */
 .flex-row {
   display: -webkit-box;
   display: -moz-box;
@@ -33,10 +34,31 @@
   -ms-flex-flow: column;
   flex-flow: column; }
 
+/* centering with flex */
+.center {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column;
+  -moz-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center; }
+
 .Nav {
   z-index: 100;
-  transition: all .5s ease;
-  background-color: lightgrey;
+  transition: all 350ms ease;
+  background-color: white;
   position: fixed;
   top: 0;
   left: 0; }
@@ -52,7 +74,6 @@
   display: flex; }
 
 .Nav ul li {
-  border: 1px dashed red;
   list-style: none;
   margin: 10px;
   display: inline; }
@@ -63,7 +84,8 @@
     display: none; }
   .Nav {
     height: 40px;
-    width: 100vw; }
+    width: 100vw;
+    border-bottom: 1px solid lightgrey; }
   .Nav #Logo {
     top: 10px;
     left: 20px; }
@@ -99,7 +121,9 @@
   .Nav {
     height: 100vh;
     width: 300px;
-    max-width: 70vw; }
+    max-width: 70vw;
+    background-color: #030303;
+    color: white; }
   .Nav.open {
     transform: translate3d(0vw, 0, 0); }
   .Nav.closed {
@@ -115,5 +139,8 @@
     padding: 20px;
     margin: 0; }
   .Nav ul li {
+    /*@include border(red);*/
     margin: 10px;
-    display: block; } }
+    display: block; }
+  .Nav ul li p {
+    color: white; } }
