--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,6 +13,10 @@ $ultimate_top: 100;
 /* nav */
 $fixed_nav_height: 40px;
 $slideout_nav_width: 300px;
+$transition_speed: 350ms;
 
 /* footer */
 $footer_height: 100px;
+
+/* colors */
+$matte_black: #030303;
