--- a/src/Nav.scss
+++ b/src/Nav.scss
@@ -2,8 +2,8 @@
 
 .Nav {
 	z-index: $ultimate_top;
-	transition: all .5s ease;
-	background-color: lightgrey;
+	transition: all $transition_speed ease;
+	background-color: white;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -13,7 +13,6 @@
 	ul {
 		@include flexbox();
 		li {
-			@include border(red);
 			list-style: none;
 			margin: 10px;
 			display: inline;
@@ -29,6 +28,7 @@
 	.Nav {
 		height: $fixed_nav_height;
 		width: 100vw;
+		border-bottom: 1px solid lightgrey;
 		#Logo {
 			top: $gutter/2;
 			left: $gutter;
@@ -65,6 +65,8 @@
 		height: 100vh;
 		width: $slideout_nav_width;
 		max-width: 70vw;
+		background-color: $matte_black;
+		color: white;
 		&.open {
 			transform: translate3d(0vw, 0, 0);
 		}
@@ -80,8 +82,10 @@
 			padding: $gutter;
 			margin: 0;
 			li {
+				/*@include border(red);*/
 				margin: 10px;
 				display: block;
+				p {color: white; }
 			}
 		}
 	}
