--- a/src/Shroud.scss
+++ b/src/Shroud.scss
@@ -4,14 +4,17 @@
 	z-index: $top;
 	width: 100vw;
 	height: 100vh;
-	background-color: rgba(0,0,0,.1);
+	background-color: rgba(0,0,0,0.5);
 	position: fixed;
 	top: 0;
 	left: 0;
+	transition: all $transition_speed ease;
 	&.show {
+		opacity: 1;
 		display: block;
 	}
 	&.hide {
+		opacity: 0;
 		display: none;
 	}
 }
