--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -3,6 +3,7 @@
 /* z-index */
 /* nav */
 /* footer */
+/* colors */
 .flex-row {
   display: -webkit-box;
   display: -moz-box;
@@ -32,6 +33,27 @@
   -moz-flex-flow: column;
   -ms-flex-flow: column;
   flex-flow: column; }
+
+/* centering with flex */
+.center {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column;
+  -moz-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center; }
 
 @font-face {
   font-family: 'Roboto';
@@ -78,12 +100,10 @@ small, .font_small {
   font-size: 0.707em; }
 
 .title {
-  /*margin-bottom: $gutter;*/ }
+  margin-top: 20px;
+  margin-bottom: 20px; }
 
-.center * {
-  text-align: center; }
-
-h1.center, h2.center, h3.center, h4.center, p.center {
+h1.center, h2.center, h3.center, h4.center, p.center, small.center {
   text-align: center; }
 
 .uppercase {
@@ -92,3 +112,6 @@ h1.center, h2.center, h3.center, h4.center, p.center {
 .bold {
   /*font-weight: bold;*/
   font-family: 'RobotoBold'; }
+
+.underline {
+  text-decoration: underline; }
