--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -50,12 +50,10 @@ h4 {font-size: 1.414em;}
 small, .font_small {font-size: 0.707em;}
 
 .title {
-	/*margin-bottom: $gutter;*/
+	margin-top: $gutter;
+	margin-bottom: $gutter;
 }
-.center {
-	* { text-align: center; }
-}
-h1, h2, h3, h4, p {
+h1, h2, h3, h4, p, small {
 	&.center {
 		text-align: center;
 	}
@@ -66,4 +64,7 @@ h1, h2, h3, h4, p {
 .bold {
 	/*font-weight: bold;*/
 	font-family: 'RobotoBold';
+}
+.underline {
+	text-decoration: underline;
 }
