clean up + stable

--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -64,6 +64,7 @@
   margin-bottom: 20px; }
 
 .ProjectListItem {
+  border: 1px dashed red;
   cursor: pointer;
   background-image: none !important;
   /*	
