--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -97,7 +97,7 @@
   margin-right: 20px; }
 
 .Resume .resume-container .resume-section ul li {
-  list-style: disc; }
+  /*list-style: disc;*/ }
 
 /* 640px or bigger */
 @media only screen and (min-width: 640px) {
