trying to get CSSTransitionGroup to work for project nav slide up/down

--- a/src/pages/Projects/ProjectList.scss
+++ b/src/pages/Projects/ProjectList.scss
@@ -1,3 +1,44 @@
+/* animation testing */
+.example {
+	background-color: red;
+}
+.example-enter {
+	opacity: 0.01;
+	@include border(green);
+}
+
+.example-enter.example-enter-active {
+	opacity: 1;
+	transition: opacity 500000ms ease-in;
+	@include border(green);
+}
+
+.example-leave {
+	opacity: 1;
+	@include border(green);
+}
+
+.example-leave.example-leave-active {
+	opacity: 0.01;
+	transition: opacity 300000ms ease-in;
+	@include border(green);
+
+}
+.example-appear {
+	opacity: 0.01;
+	@include border(green);
+
+}
+
+.example-appear.example-appear-active {
+	opacity: 1;
+	transition: opacity 5s ease-in;
+	@include border(green);
+
+}
+
+
+
 @import '../../styles/_all';
 
 $project_tile_size: 200px;
@@ -21,7 +62,7 @@ $project_tile_size: 200px;
 	height: $project_tile_size;
 	background-size: cover;
 	background-position: 50% 50%;
-*/
+	*/
 	.text {
 		padding: $gutter/4;
 	}
