--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -1,3 +1,25 @@
+/* animation testing */
+.example-enter {
+  opacity: 0.01; }
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in; }
+
+.example-leave {
+  opacity: 1; }
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in; }
+
+.example-appear {
+  opacity: 0.01; }
+
+.example-appear.example-appear-active {
+  opacity: 1;
+  transition: opacity .5s ease-in; }
+
 /* breakpoints */
 /* base units */
 /* z-index */
@@ -76,8 +98,9 @@
 	background-size: cover;
 	background-position: 50% 50%;
 */ }
-  .ProjectListItem .text {
-    padding: 5px; }
+
+.ProjectListItem .text {
+  padding: 5px; }
 
 .ProjectDetail {
   display: -webkit-box;
@@ -98,21 +121,26 @@
   -ms-justify-content: center;
   justify-content: center;
   -ms-flex-pack: center; }
-  .ProjectDetail .project-detail-cover {
-    height: 400px;
-    width: 100vw;
-    background-size: cover;
-    background-position: 50% 50%; }
-  .ProjectDetail .text {
-    width: 900px;
-    max-width: calc(100vw - 20px*2); }
-    .ProjectDetail .text .list-container {
-      margin-right: 60px;
-      margin-bottom: 20px; }
-      .ProjectDetail .text .list-container:last-child {
-        margin-right: 0; }
-      .ProjectDetail .text .list-container ul {
-        list-style: disc; }
+
+.ProjectDetail .project-detail-cover {
+  height: 400px;
+  width: 100vw;
+  background-size: cover;
+  background-position: 50% 50%; }
+
+.ProjectDetail .text {
+  width: 900px;
+  max-width: calc(100vw - 20px*2); }
+
+.ProjectDetail .text .list-container {
+  margin-right: 60px;
+  margin-bottom: 20px; }
+
+.ProjectDetail .text .list-container:last-child {
+  margin-right: 0; }
+
+.ProjectDetail .text .list-container ul {
+  list-style: disc; }
 
 /* 640px or bigger */
 @media only screen and (min-width: 640px) {
